# unifile

./: .coverage  LICENSE  README.md  dockerfile  dockerignore  pyproject.toml  setup.py
src/unifile/: __init__.py  unifile.py
src/unifile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/utf8fix/: utf8fix.py
src/utf8fix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_unifile.py  test_utf8fix.py
